# agent-embed

./: README.md  pyproject.toml
src/agent_embed/: __init__.py  dedup.py  routing.py  search.py  vectors.py
tests/: test_dedup.py  test_routing.py  test_search.py  test_vectors.py
