[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-embed"
version = "0.1.0"
description = "Zero-dependency embedding utilities for LLM agents: cosine similarity, vector normalization, nearest-neighbor search in pure Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "agents", "embeddings", "cosine-similarity", "vector-search", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/darshjme/agent-embed"
Repository = "https://github.com/darshjme/agent-embed"

[tool.setuptools.packages.find]
where = ["src"]
